css alignent for comments is corrected

--- a/src/components/comments/comment/style.css
+++ b/src/components/comments/comment/style.css
@@ -5,5 +5,6 @@
      align-items: center
 }
 .comment-text{
-font-size: 15px;    
+font-size: 15px;   
+margin:0;
 }
